<resources>
    <string name="app_name">Smartcity</string>
    <string name="add_note">Adicionar Nota</string>
    <string name="titulo">Titulo</string>
    <string name="subtitulo">SubTitulo</string>
    <string name="nota">Nota</string>
    <string name="adicionar">Adicionar</string>
    <string name="mensagemErro">Não foi inserida nenhuma nota</string>
    <string name="edit">editar</string>
    <string name="EliminarTudo">Eliminar Tudo</string>
    <string name="procurar">Procurar</string>
    <string name="pesquisartitulo">Pesquisar por Titulo</string>
    <string name="pesquisarsubtitulo">Pesquisar por SubTitulo</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="tituloCerteza">Eliminar todas as notas</string>
    <string name="mensagemCerteza">Tem a certeza que pretende eliminar todas as notas? Este processo não é reversivel!</string>
    <string name="tituloCerteza2">Apagar Nota</string>
    <string name="mensagemCerteza2">Tem a certeza que pretende apagar esta nota? Esta é uma ação irreversivel!</string>
    <string name="nomeApp">SmartCity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registo">Registo</string>
    <string name="irnotas">Ver Bloco Notas</string>
    <string name="registar">Registar</string>
    <string name="repetirpassword">Repita a Password</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="inserirlocalizacao">Inserir Localização</string>
    <string name="texto">Descrição</string>
    <string name="guardar">Enviar</string>
    <string name="tituloCertezaMarker">Apagar Marcador</string>
    <string name="mensagemCertezaMarker">Tem a certeza que pretende apagar este marcador? Esta é uma ação irreversivel!</string>
    <string name="marcadorEliminado">Marcador foi eliminado</string>
    <string name="erroBD">Ocorreu um erro. Tente novamente</string>
    <string name="morada">Morada</string>
    <string name="ApagadoCSucesso">Marcador apagado com sucesso</string>
    <string name="error">Erro na comunicação. Tente novamente</string>
    <string name="filtro10">Filtrar num Raio</string>
    <string name="listartudo">Todos os Pontos</string>
    <string name="tituloFiltro">Filtro Distância</string>
    <string name="mensagemFiltro">Defina o raio em km\'s que pretende filtrar</string>
    <string name="filtrar">Filtrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="descr">Descrição: %s \nTipo: %s \nUsername: %s  \nData: %s  \nLat: %s \nLng: %s</string>
    <string name="encontrados">Foram encontrados %s marcadores num raio de %s km</string>
    <string name="editadoComSucess">Editado com sucesso!</string>
    <string name="err0">Erro</string>
    <string name="necessaryText">É necessário ter um texto</string>
    <string name="loginErrado">Username ou password incorreta</string>
    <string name="loginSucesso">Login efetuado com sucesso</string>
    <string name="usernameExistente">Username já existente. Escolha outro.</string>
    <string name="registoSucesso">Registo efetuado com sucesso.</string>
    <string name="passwordNCoin">Passwords não coincidem</string>
    <string name="naoPodeEditar">Não pode editar/apagar por não ser o responsável</string>
    <string name="filtro20">Filtrar por Tipo</string>

</resources>
