<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corNotasFraco">

    <TextView
        android:layout_marginTop="10pt"
        android:layout_marginLeft="3pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/titulo"
        android:text="@string/titulo"
        android:textStyle="bold"
        android:textSize="10pt"
        android:fontFamily="sans-serif-light">

    </TextView>

    <EditText
        android:id="@+id/titulo"
        android:layout_marginLeft="3pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />

    <TextView

        android:layout_marginLeft="3pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/subtitulo"
        android:text="@string/subtitulo"
        android:textSize="7pt"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic">

    </TextView>

    <EditText
        android:id="@+id/subtitulo"
        android:layout_marginLeft="3pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />


    <TextView

        android:layout_marginLeft="3pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:labelFor="@+id/nota"

        android:text="@string/nota"/>

    <EditText
        android:lines="10"
        android:id="@+id/nota"
        android:layout_marginLeft="3pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_save"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:text="@string/adicionar" />

    </LinearLayout>

    </LinearLayout>
