<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corFundo"
    android:id="@+id/relative1">

    <TextView
        android:id="@+id/TextoViewTitulo"
        android:layout_marginTop="40dp"
        android:layout_marginStart="110dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registo"
        android:textStyle="bold"
        android:textSize="40sp"
        android:fontFamily="sans-serif">

    </TextView>

    <TextView
        android:id="@+id/TextoViewlogin"
        android:layout_below="@+id/TextoViewTitulo"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:labelFor="@+id/login"

        android:textSize="25sp"
        android:fontFamily="sans-serif">

    </TextView>

        <EditText
            android:id="@+id/login"
            android:layout_below="@+id/TextoViewlogin"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="25sp"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/TextViewPassword"
            android:layout_marginTop="12pt"
            android:layout_marginStart="30dp"
            android:layout_below="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="sans-serif"
            android:textSize="25sp"
            >

        </TextView>

        <EditText
            android:id="@+id/password"
            android:layout_below="@+id/TextViewPassword"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:inputType="textPassword"
            android:textSize="18sp" />

    <TextView
        android:id="@+id/TextViewPassword2"
        android:layout_marginTop="12pt"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repetirpassword"
        android:fontFamily="sans-serif"
        android:textSize="25sp"
        >

    </TextView>

    <EditText
        android:id="@+id/password2"
        android:layout_below="@+id/TextViewPassword2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        >


        <Button
            android:id="@+id/button_registo"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/registar" />


    </RelativeLayout>

</RelativeLayout>
