<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/corFundo"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/TextoViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo1" />

        <TextView
            android:id="@+id/TextoViewlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextoViewLogo"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif"
            android:labelFor="@+id/login"

            android:text="@string/username"
            android:textSize="25sp">

        </TextView>

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextoViewlogin"
            android:layout_marginStart="30dp"
            android:fontFamily="sans-serif"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/TextViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12pt"
            android:fontFamily="sans-serif"
            android:text="@string/password"
            android:textSize="25sp">

        </TextView>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextViewPassword"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/corFundo" />

            <Button
                android:id="@+id/button_registo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_login"
                android:layout_margin="10dp"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#F8F5F5"
                android:text="@string/registo"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/button_irnotas"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_registo"
                android:layout_centerInParent="true"
                android:backgroundTint="#F8F5F5"
                android:text="@string/irnotas"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/colorPrimaryDark" />

        </RelativeLayout>


    </RelativeLayout>
</ScrollView>
