<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corFundo"
    android:id="@+id/relative1">

    <TextView
        android:id="@+id/TextoViewTitulo"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/inserirlocalizacao"
        android:textStyle="bold"
        android:textSize="30sp"
        android:fontFamily="sans-serif">

    </TextView>

    <TextView
        android:id="@+id/TextoViewTexto"
        android:layout_below="@+id/TextoViewTitulo"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto"
        android:labelFor="@+id/login"
        android:textSize="25sp"
        android:fontFamily="sans-serif">

    </TextView>

    <EditText
        android:id="@+id/texto"
        android:layout_below="@+id/TextoViewTexto"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="25sp"
        android:inputType="textLongMessage"
         />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        >


        <Button
            android:id="@+id/button_save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/corFundo"
            android:layout_marginLeft="20dp"
            android:text="@string/guardar" />


    </RelativeLayout>

</RelativeLayout>
