<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corFundo">


    <TextView
        android:id="@+id/moradaTextView"
        android:layout_marginStart="3pt"
        android:layout_marginTop="10pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="10pt"
        android:text="@string/morada"/>

    <EditText

        android:id="@+id/morada"
        android:layout_marginStart="3pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"

        android:textSize="10pt" />

    <TextView
        android:id="@+id/textoTextView"

        android:layout_marginStart="3pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/titulo"
        android:text="@string/texto"
        android:textSize="10pt"
        android:fontFamily="sans-serif-light">

    </TextView>

    <EditText
        android:id="@+id/texto"

        android:layout_marginStart="3pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="10pt"
        android:inputType="text"
        android:importantForAutofill="no" />


    <TextView
        android:id="@+id/tipoTextView"
        android:layout_marginStart="3pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/titulo"
        android:text="@string/texto"
        android:textSize="10pt"
        android:fontFamily="sans-serif-light"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtVw"
        android:layout_toRightOf="@+id/txtVw"
        android:layout_marginStart="3pt"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/editar_marker"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:text="@string/edit" />

    </LinearLayout>

</LinearLayout>
